Make sure number of points is not split on small screens

--- a/app/assets/stylesheets/common/home.scss
+++ b/app/assets/stylesheets/common/home.scss
@@ -18,6 +18,7 @@
   padding-right:15px;
   font-weight:bold;
   font-size:18px;
+  width:115px;
 }
 
 .home-stats .right {
